--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "gsap": "^3.12.2",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
