--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.15.1",
     "@studio-freight/lenis": "^1.0.16",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
