--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@motionone/utils": "^10.15.1",
     "@studio-freight/lenis": "^1.0.16",
+    "@types/imagesloaded": "^4.1.2",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -19,6 +20,7 @@
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.18",
     "gsap": "^3.12.2",
+    "imagesloaded": "^5.0.0",
     "next": "13.4.7",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
